--- a/components/Navigation/Navigation.module.css
+++ b/components/Navigation/Navigation.module.css
@@ -1,7 +1,8 @@
 .nav {
   display: none;
-  margin-top: 12rem;
-  padding: 1.25rem 0 5rem 0;
+  margin-top: 11rem;
+  margin-bottom: 5rem;
+  padding: 1.25rem 0 2rem 0;
   background: transparent;
   backdrop-filter: blur(10px);
 }
